# lalalang

./: .coveragerc  .envrc  .gitignore  3lc.py  LICENSE  README.md  makefile  requirements.txt  setup.cfg  setup.py
.github/: CODE_OF_CONDUCT.md
.github/workflows/: lambda.yml  main.yml  pypi.yml
app/: cloudformation.yml
app/client/: .gitignore  cloudformation.yml  package-lock.json  package.json  webpack.config.js
app/client/public/: index.html
app/client/src/: App.css  App.js  app.js  index.html  styles.css
app/client/src/components/: Banner.js  Editor.css  Editor.js  Footer.css  Footer.js  Result.css  Result.js
app/lalalambda/: swagger.yml  template.yaml
app/lalalambda/compile/: lambda.py  requirements.txt  utils.py
app/lalalambda/events/: event.json
docs/: README.md
examples/: binary_tree.3la  factorial.3la  facts.3la  fibo.3la  fibonacci.3la  linked_list.3la  lists.3la  sqrt.3la  square_root.3la
lalalang/: __init__.py  __main__.py
lalalang/evaluator/: __init__.py  builtins.py  environment.py  evaluator.py  object.py
lalalang/lexer/: __init__.py  lexer.py  token.py
lalalang/parser/: __init__.py  ast.py  nodes.py  parser.py  precedence.py
tests/: test_evaluator.py  test_lexer.py  test_parser.py
tests/mocks/: evaluator.py  lexer.py  parser.py
tests/unit/: test_lexer.py
