[metadata]
name = lalalang
version = 0.1
author = Manuel Esparza
description = A programming language with a funny name
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/manoloesparta/lalalang
license = MIT

[options]
zip_safe = False
packages = find:
install_requires =
	pretty_errors == 1.2.23
python_requires = >=3.8
include_package_data = True
setup_requires = setuptools_scm

[options.entry_points]
console_scripts =
    3lc = lalalang.__main__:main
