[metadata]
name = lalalang
version = 1.2.9
author = Manuel Esparza
description = A programming language with a funny name
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/manoloesparta/lalalang
license = MIT

[options]
zip_safe = False
packages = find:
install_requires =
	click == 8.0.1
python_requires = >=3.9
include_package_data = True
setup_requires = setuptools_scm

[options.entry_points]
console_scripts =
    3lang = lalalang.__main__:cli
